# raker

./: .gitignore  AGENTS.md  README.md  TODO.md  test_ts.rs
.github/workflows/: pages.yml  release.yml
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs  output.rs  test_tree_sitter.rs  types.rs
cli/src/commands/: auth.rs  contexts.rs  files.rs  hook.rs  mod.rs  parse.rs  review.rs  stats.rs  tasks.rs
scripts/: build.sh  install.sh
web/: CNAME  index.html  install
