[package]
name = "raker"
version = "0.1.0"
edition = "2021"
description = "Reviewer Agent CLI for checking code, design, docs, and security against private context"

[[bin]]
name = "raker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
ignore = "0.4.25"
genai = "0.5.3"

