[package]
name = "raker"
version = "0.1.0"
edition = "2021"
description = "Your intelligent, context-aware Reviewer Agent"

[[bin]]
name = "raker"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
ignore = "0.4.25"
genai = "0.5.3"
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"

